fix scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
     border: 2px solid #6B6660;
     padding: 0 20px;
     max-height: 100vh;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .sidebar a:last-child {
@@ -397,6 +397,28 @@ footer a:hover {
 
 .overlay .arrow-up.drop-down-button span::after {
     content: url(../img/white-arrow-up.svg);
+}
+
+/* custom scrollbar */
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: transparent; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888; 
+    border-radius: 3px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
 }
 
 @media screen and (max-width:992px) {
